--- a/src/components/CTAColor.astro
+++ b/src/components/CTAColor.astro
@@ -35,7 +35,7 @@ if (!images[content.imagePath]) {
       set:html={content.headerH1}
     />
     <p
-      class="text-base lg:text-xl mt-3 font-sans font-semibold tracking-wide text-primary-600 text-left max-w-5xl"
+      class="text-base lg:text-xl mt-3 font-sans font-medium tracking-wide text-primary-600 text-left max-w-5xl"
       set:html={content.paragraph}
     />
     <div
