--- a/src/components/BlogFeed.astro
+++ b/src/components/BlogFeed.astro
@@ -11,7 +11,7 @@ const { data } = Astro.props;
 
 <section
   id="blogfeed"
-  class="relative isolate overflow-hidden bg-white px-6 pt-16 pb-36 lg:overflow-visible lg:px-0"
+  class="relative isolate overflow-hidden bg-gray-50 px-6 pt-16 pb-36 lg:overflow-visible lg:px-0"
 >
   <div class="mx-auto max-w-6xl lg:pr-4">
     <div class="my-9 text-center">
@@ -37,35 +37,6 @@ const { data } = Astro.props;
         )
       }
     </div>
-  </div>
-  <div class="absolute inset-0 -z-10 overflow-hidden">
-    <svg
-      class="absolute left-[max(50%,25rem)] top-0 h-[64rem] w-[128rem] -translate-x-1/2 stroke-gray-200 [mask-image:radial-gradient(64rem_64rem_at_top,white,transparent)]"
-      aria-hidden="true"
-    >
-      <defs>
-        <pattern
-          id="e813992c-7d03-4cc4-a2bd-151760b470a0"
-          width="200"
-          height="200"
-          x="50%"
-          y="-1"
-          patternUnits="userSpaceOnUse"
-        >
-          <path d="M100 200V.5M.5 .5H200" fill="none"></path>
-        </pattern>
-      </defs>
-      <svg x="50%" y="-1" class="overflow-visible fill-gray-50">
-        <path
-          d="M-100.5 0h201v201h-201Z M699.5 0h201v201h-201Z M499.5 400h201v201h-201Z M-300.5 600h201v201h-201Z"
-          stroke-width="0"></path>
-      </svg>
-      <rect
-        width="100%"
-        height="100%"
-        stroke-width="0"
-        fill="url(#e813992c-7d03-4cc4-a2bd-151760b470a0)"></rect>
-    </svg>
   </div>
   <div
     class="w-full flex flex-wrap gap-3 lg:gap-6 mt-16 mx-auto justify-center"
