Update: add OgImage or heroImage

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -14,7 +14,7 @@ const {
   title,
   description,
   keywords,
-  image = "/blog-placeholder-1.jpg",
+  image = "/SunCity-OG-image.png",
 } = Astro.props;
 ---
 
