--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -25,6 +25,7 @@ const {
   siteTitle={title + " | Blog | Right Rudder Marketing"}
   siteDescription={description + " Right Rudder Marketing Blog."}
   keywords={category + ", " + tags.join(", ") + keywords ? keywords : KEYWORDS}
+  ogImage={heroImage}
 >
   <div class="h-20 lg:h-28 w-full bg-primary-950/80"></div>
 
