--- a/src/pages/our-team.astro
+++ b/src/pages/our-team.astro
@@ -3,6 +3,7 @@ import BookCTA from "../components/BookCTA.astro";
 import ContentCTA from "../components/ContentCTA.astro";
 import CTAColor from "../components/CTAColor.astro";
 import GoogleMaps from "../components/GoogleMaps.astro";
+import HeaderScreen from "../components/HeaderScreen.astro";
 import ImageComp from "../components/ImageComp.astro";
 import PageSummary from "../components/PageSummary.astro";
 import Partners from "../components/Partners.astro";
@@ -19,80 +20,7 @@ const { data } = ourTeam;
   siteDescription={data.pageDescription}
   keywords={data.pageKeywords}
 >
-  <header
-    class="relative pt-20 lg:mt-0 min-h-screen h-fit bg-gray-800 text-white flex flex-col items-center justify-end overflow-hidden"
-  >
-    <div
-      class="absolute w-full h-full inset-0 -z-0 flex flex-wrap lg:flex-nowrap overflow-hidden group"
-    >
-      <ImageComp
-        imagePath="/src/assets/sun-city-team-georgette.webp"
-        imageAlt="Georgette Poulos portrait - Sun City Aviation Academy - The Premier Flight School In Hollywood, FL"
-        styles="w-1/2 md:w-1/2 lg:w-1/5 object-cover h-full animate-slow-zoom"
-        loading="eager"
-        quality="99"
-      />
-      <ImageComp
-        imagePath="/src/assets/sun-city-team-cris.webp"
-        imageAlt="Cris Freilich portrait - Sun City Aviation Academy - The Premier Flight School In Hollywood, FL"
-        styles="w-1/2 hidden lg:block md:w-1/3 lg:w-1/5 object-cover h-full animate-slow-zoom"
-        loading="eager"
-        quality="99"
-      />
-      <ImageComp
-        imagePath="/src/assets/sun-city-team-luke.webp"
-        imageAlt="Luke Poulos portrait - Sun City Aviation Academy - The Premier Flight School In Hollywood, FL"
-        styles="w-1/2 order-first lg:order-none md:w-1/2 lg:w-1/5 object-cover h-full animate-slow-zoom"
-        loading="eager"
-        quality="99"
-      />
-      <ImageComp
-        imagePath="/src/assets/sun-citi-aviation-academy-director-operations-joe.jpg"
-        imageAlt="Joe Cannizzaro portrait - Sun City Aviation Academy - The Premier Flight School In Hollywood, FL"
-        styles="w-1/2 hidden lg:block md:w-1/3 lg:w-1/5 object-cover h-full animate-slow-zoom"
-        loading="eager"
-        quality="99"
-      />
-      <ImageComp
-        imagePath="/src/assets/sun-citi-aviation-academy-chief-pilot-paul.jpg"
-        imageAlt="Paul Janecki portrait - Sun City Aviation Academy - The Premier Flight School In Hollywood, FL"
-        styles="w-1/2 hidden lg:block md:w-1/3 lg:w-1/5 object-cover h-full animate-slow-zoom"
-        loading="eager"
-        quality="99"
-      />
-    </div>
-    <div
-      class="absolute bg-gradient-to-b from-primary-950/40 to-primary-950/60 w-full h-full z-0"
-    >
-    </div>
-    <!-- Text -->
-    <div
-      class="text-white mb-12 lg:mt-0 text-center lg:text-left z-10 flex flex-col items-center gap-4 px-5 h-full lg:pt-28 justify-center"
-    >
-      <h1
-        class="text-3xl pt-20 lg:pt-0 md:text-6xl drop-shadow-lg max-w-3xl text-center font-black tracking-wide text-gray-100"
-        set:html={data.header.headerH1}
-      />
-      <h2
-        class="text-sm md:text-xl mt-3 font-semibold tracking-wide text-center max-w-4xl"
-        set:html={data.header.paragraph}
-      />
-      <div
-        class="mt-6 flex flex-wrap justify-center align-middle items-center gap-6 z-10"
-      >
-        {
-          data.header.buttons.map((btn) => (
-            <a
-              href={btn.link}
-              class={`${btn.primary ? "btn-primary" : "btn-white"} w-full md:w-auto`}
-            >
-              <span class="drop-shadow-sm">{btn.name}</span>
-            </a>
-          ))
-        }
-      </div>
-    </div>
-  </header>
+  <HeaderScreen content={data.header} />
 
   <PageSummary content={data.pageSummary} />
 
