--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,13 +1,13 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION, KEYWORDS } from "../consts";
+import { SITE_TITLE, SITE_DESCRIPTION, KEYWORDS, OG_IMAGE } from "../consts";
 import "@fontsource-variable/montserrat";
 import "@fontsource/merriweather";
 import "@fontsource-variable/quicksand";
 import Navbar from "../components/Navbar";
 const { pathname } = Astro.url;
-const { siteTitle, siteDescription, keywords } = Astro.props;
+const { siteTitle, siteDescription, keywords, ogImage } = Astro.props;
 import ChatWidget from "../components/ChatWidget.astro";
 import Banner from "../components/Banner.astro";
 ---
@@ -19,6 +19,7 @@ import Banner from "../components/Banner.astro";
       title={siteTitle || SITE_TITLE}
       description={siteDescription || SITE_DESCRIPTION}
       keywords={keywords || KEYWORDS}
+      image={ogImage || OG_IMAGE}
     />
   </head>
   <body class="font-sans">
