--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,7 +9,8 @@ import {
   SITE_DESCRIPTION,
 } from "../consts";
 
-const GHL_CONTACT_FORM_WEBHOOK_URL = import.meta.env.GHL_CONTACT_FORM_WEBHOOK_URL;
+// const GHL_CONTACT_FORM_WEBHOOK_URL = import.meta.env.GHL_CONTACT_FORM_WEBHOOK_URL;
+const GHL_CONTACT_FORM_WEBHOOK_URL = "https://services.leadconnectorhq.com/hooks/SmZxqjL2v5KaWPxMSMbW/webhook-trigger/Nmwmb08DBVCH2sLtb1kh";
 
 const { data } = contact;
 ---
@@ -146,26 +147,26 @@ const { data } = contact;
         <form id="contact-form" class="w-full max-w-xl">
           <div class="">
             <div class="mb-4">
-              <label for="first-name" class="block mb-0 font-semibold">
+              <label for="firstName" class="block mb-0 font-semibold">
                 First Name
               </label>
               <input
                 type="text"
-                id="first-name"
-                name="first-name"
+                id="firstName"
+                name="firstName"
                 autocomplete="given-name"
                 class="w-full h-9 p-2 border bg-gray-100 border-gray-400 rounded-sm focus:outline focus:outline-primary-600/50 focus:ring focus:ring-primary-600/50 focus:border-primary-600/50"
                 required
               />
             </div>
             <div class="mb-4">
-              <label for="last-name" class="block mb-0 font-semibold">
+              <label for="lastName" class="block mb-0 font-semibold">
                 Last Name
               </label>
               <input
                 type="text"
-                id="last-name"
-                name="last-name"
+                id="lastName"
+                name="lastName"
                 autocomplete="family-name"
                 class="w-full h-9 p-2 border bg-gray-100 border-gray-400 rounded-sm focus:outline focus:outline-primary-600/50 focus:ring focus:ring-primary-600/50 focus:border-primary-600/50"
                 required
@@ -269,17 +270,15 @@ const { data } = contact;
     document.addEventListener("DOMContentLoaded", function () {
       const form = document.getElementById("contact-form");
 
-      form.addEventListener("submit", async function (event) {
+      form.addEventListener("submit", async (event) => {
         event.preventDefault();
 
-        const formData = new FormData(form);
-
-        const data = {
-          firstName: formData.get("first-name"),
-          lastName: formData.get("last-name"),
-          phone: formData.get("phone"),
-          email: formData.get("email"),
-          message: formData.get("message"),
+        const formData = {
+          firstName: form.firstName.value,
+          lastName: form.lastName.value,
+          email: form.email.value,
+          phone: form.phone.value,
+          message: form.message.value,
         };
 
         try {
@@ -288,24 +287,21 @@ const { data } = contact;
             headers: {
               "Content-Type": "application/json",
             },
-            body: JSON.stringify(data),
+            body: JSON.stringify(formData),
           });
 
           const result = await response.json();
+
           if (response.ok) {
-            alert("Form submitted successfully!");
-            form.reset();
             window.location.href = "/contact-confirmation";
           } else {
-            alert("Error: " + result.message);
+            console.error("Error submitting form:", error);
           }
         } catch (error) {
           console.error("Error submitting form:", error);
-          alert("Failed to submit form.");
         }
       });
     });
   </script>
-
   <script src="../scripts/emailValidation.js"></script>
 </BaseLayout>
