add env variables

--- a/src/components/Aviation101Form.astro
+++ b/src/components/Aviation101Form.astro
@@ -1,9 +1,7 @@
 ---
-const GHL_AVIATION101_FORM_WEBHOOK_URL =
-  "https://services.leadconnectorhq.com/hooks/SmZxqjL2v5KaWPxMSMbW/webhook-trigger/k6TPQBnLnDsWgI7szFcN";
+const GHL_AVIATION101_FORM_WEBHOOK_URL = import.meta.env.GHL_AVIATION101_FORM_WEBHOOK_URL;
 
-const MONDAY_API_KEY =
-  "eyJhbGciOiJIUzI1NiJ9.eyJ0aWQiOjI4NTk3MTAxNCwiYWFpIjoxMSwidWlkIjozNjU3NTA5NiwiaWFkIjoiMjAyMy0xMC0wM1QwOToxNjozNC4wMDBaIiwicGVyIjoibWU6d3JpdGUiLCJhY3RpZCI6MTQxNTUyMTQsInJnbiI6InVzZTEifQ.gXbleOZaGl3TvCNq--xqEyn3LzR4Y5HvWZ9yefXbis8";
+const MONDAY_API_KEY = import.meta.env.MONDAY_API_KEY;
 
 const MONDAY_BOARD_ID = 3536260889;
 
