--- a/src/pages/discovery-flight.astro
+++ b/src/pages/discovery-flight.astro
@@ -9,11 +9,9 @@ import {
 import discoveryInfo from "../data/discovery-flight";
 import Header from "../components/Header.astro";
 
-const GHL_DISCOVERY_FORM_WEBHOOK_URL =
-  "https://services.leadconnectorhq.com/hooks/SmZxqjL2v5KaWPxMSMbW/webhook-trigger/CTLkzZvkTEe4c1z2pwhl";
+const GHL_DISCOVERY_FORM_WEBHOOK_URL = import.meta.env.GHL_DISCOVERY_FORM_WEBHOOK_URL;
 
-const MONDAY_API_KEY =
-  "eyJhbGciOiJIUzI1NiJ9.eyJ0aWQiOjI4NTk3MTAxNCwiYWFpIjoxMSwidWlkIjozNjU3NTA5NiwiaWFkIjoiMjAyMy0xMC0wM1QwOToxNjozNC4wMDBaIiwicGVyIjoibWU6d3JpdGUiLCJhY3RpZCI6MTQxNTUyMTQsInJnbiI6InVzZTEifQ.gXbleOZaGl3TvCNq--xqEyn3LzR4Y5HvWZ9yefXbis8";
+const MONDAY_API_KEY = import.meta.env.MONDAY_API_KEY;
 
 const MONDAY_BOARD_ID = 3536260889;
 
