--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -71,7 +71,7 @@ const {
 <script
   type="text/partytown"
   async
-  src="https://www.googletagmanager.com/gtag/js?id=YOURIDGOESHERE"></script>
+  src="https://www.googletagmanager.com/gtag/js?id=G-BDBJ1NG5QS"></script>
 <script type="text/partytown">
   window.dataLayer = window.dataLayer || [];
   function gtag() {
@@ -79,28 +79,37 @@ const {
   }
   gtag("js", new Date());
 
-  gtag("config", "YOURIDGOESHERE");
+  gtag("config", "G-BDBJ1NG5QS");
 </script>
+
+<!-- Google Tag Manager -->
+<script type="text/partytown"
+  async>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PW8G695M');</script>
+<!-- End Google Tag Manager -->
 
 <!-- NEED TO UPDATE SCHEMA -->
 <script type="application/ld+json">
   {
     "@context": "http://schema.org",
     "@type": "LocalBusiness",
-    "name": "Alto Flight Academy",
-    "description": "Discover top-notch flight training at Alto Flight Academy in Oklahoma City. Since 1995, we've been helping aspiring pilots achieve their dreams with FAA-certified instructors, competitive rates, and comprehensive programs including private pilot training, instrument rating courses, and commercial pilot license training. Join our professional flight school in Yukon, OK, and take the first step towards your aviation career.",
-    "keywords": "flight school, flight training, pilot training, pilot school, flight lessons, flight instruction, flight instructor, flight school near me, flight training near me, pilot training near me, pilot school near me, flight lessons near me, flight instruction near me, flight instructor near me",
-    "image": "pending",
-    "logo": "pending",
-    "telephone": "(405) 789-1234",
-    "email": "info@altoflight.com",
+    "name": "Sun City Aviation Academy",
+    "description": "Our mission is to train professional, safe, and proficient pilots, who will one day excel in the aviation industry. When you fly with the team at Sun City Aviation Academy, you're family. Individualized instruction means you're more than just a number. You're a future Sun City aviator. We offer a variety of flight training programs, from private pilot to commercial pilot, and everything in between. Our flight school is located in Pembroke Pines, Florida, and we serve the greater Miami area. Contact us today to learn more about our flight training programs.",
+    "keywords": "flight school near me, how to become a pilot, private pilot, discovery flight, introductory flight, instrument rating, commercial certificate, certified flight instructor, airline programs, how to become an airline pilot, Miami, South Florida, Fort Lauderdale, Hollywood, Pembroke Pines, Miramar, Weston, Davie, Plantation, Cooper City, Dania Beach, Hallandale Beach, Aventura, North Miami Beach, Miami Beach, Miami Gardens, Hialeah, Opa-locka, Miami Lakes, Miami Springs, Miami Shores, Miami Gardens, Miami Dade, Broward County",
+    "image": "/sun-city-white-text-logo.webp",
+    "logo": "/SunCity-OG-image.png",
+    "telephone": "(754)423-2159",
+    "email": "info@suncityaviation.com",
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "13000 N Sara Rd",
-      "addressLocality": "Yukon",
-      "addressRegion": "OK",
+      "streetAddress": "7201 S Airport Rd #504A",
+      "addressLocality": "Pembroke Pines",
+      "addressRegion": "FL",
       "addressCountry": "US",
-      "postalCode": "73099"
+      "postalCode": "33023"
     },
     "currenciesAccepted": "USD",
     "paymentAccepted": "Cash, Credit Card, Visa, Mastercard, American Express, Discover, Checks",
@@ -108,8 +117,8 @@ const {
       "@type": "GeoCircle",
       "geoMidpoint": {
         "@type": "GeoCoordinates",
-        "latitude": 35.60320320498056,
-        "longitude": -97.7079658306885
+        "latitude": 25.9961502751203,
+        "longitude": -80.2330145
       },
       "geoRadius": 9000
     },
@@ -118,12 +127,12 @@ const {
       "ratingValue": "5",
       "reviewCount": "14"
     },
-    "url": "https://altoflight.com/",
+    "url": "https://suncityaviation.com/",
     "priceRange": "$",
     "geo": {
       "@type": "GeoCoordinates",
-      "latitude": 35.60320320498056,
-      "longitude": -97.7079658306885
+      "latitude": 25.9961502751203,
+      "longitude": -80.2330145
     },
     "openingHoursSpecification": [
       {
@@ -135,16 +144,11 @@ const {
           "Thursday",
           "Friday",
           "Saturday"
+          "Sunday"
         ],
-        "opens": "08:00",
+        "opens": "09:00",
         "closes": "17:00"
       },
-      {
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": "Sunday",
-        "opens": "12:00",
-        "closes": "17:00"
-      }
     ],
     "makesOffer": {
       "@type": "Offer",
@@ -163,19 +167,19 @@ const {
       {
         "@type": "PropertyValue",
         "name": "IATA Code",
-        "value": "HSD"
+        "value": "HWO"
       },
       {
         "@type": "PropertyValue",
         "name": "ICAO Code",
-        "value": "KHSD"
+        "value": "KHWO"
       },
       {
         "@type": "PropertyValue",
         "name": "Airport Code",
-        "value": "HSD"
+        "value": "HWO"
       }
     ],
-    "hasMap": "https://www.google.com/maps/place/13000+N+Sara+Rd,+Yukon,+OK+73099"
+    "hasMap": "https://maps.app.goo.gl/yugDmTfMfqUNYQ7G7"
   }
 </script>
